--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -81,11 +81,11 @@
 
                 <div class="radio-buttons">
                     <div>
-                        <input id="deliver-box" type="radio" name="deliver" value="Entrega ou Levantamento" checked>
+                        <input id="deliver-box" type="radio" name="deliver" value="Para Entregar em Casa" checked>
                         <label for="deliver-box">Entrega</label>
                     </div>
                     <div>
-                        <input id="pick-up-box" type="radio" name="deliver" value="Entrega ou Levantamento">
+                        <input id="pick-up-box" type="radio" name="deliver" value="Vai Levantar a Encomenda">
                         <label for="pick-up-box">Levantar</label>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                 </div>
                 <div class="schedule-deliver">
                     <label for="schedule">Horário</label>
-                    <select id="schedule" name="Horario-disponivel">
+                    <select id="schedule">
                         <optgroup label="Manhã">
                             <option value="9h-10h">09:00 - 10:00</option>
                             <option value="10h-11h">10:00 - 11:00</option>
@@ -160,19 +160,19 @@
 
                     <!-- ========== LEVANTAR ========= -->
             <section class="pick-up-sec border-1">
-                <input type="hidden" name="Local de Levantamento">
+                <input type="hidden" name="Local de Levantamento: ">
                 <h5>
                     Onde preferes levantar a tua encomenda?
                 </h5>
                 <div>
-                    <input id="praca" type="radio" name="local" value="Quero levantar na" checked>
+                    <input id="praca" type="radio" name="local" checked>
                     <div class="mercado">
                         <label for="praca">Mercado de Famalicão</label>
                         <span>Sábado (7:00 - 13:00)</span>
                     </div>
                 </div>
                 <div>
-                    <input id="horta" type="radio" name="local" value="Quero Levantar na">
+                    <input id="horta" type="radio" name="local">
                     <label for="horta">Horta d'Ria</label>
                 </div>
                 
@@ -182,11 +182,11 @@
                 <input type="hidden" name="Levantamento na Horta">
                 <div>
                     <label for="pick-up-day">Dia de Levantamento</label>
-                    <input id="pick-up-day" type="date" name="Dia Levantamento">
+                    <input id="pick-up-day" type="date">
                 </div>
                 <div class="schedule-deliver">
                     <label for="ppick-up-schedule">Horário</label>
-                    <select id="ppick-up-schedule" name="Horario-disponivel">
+                    <select id="ppick-up-schedule">
                         <optgroup label="Manhã">
                             <option value="9h-10h">09:00 - 10:00</option>
                             <option value="10h-11h">10:00 - 11:00</option>
@@ -202,17 +202,17 @@
                     </select>
                     <div>
                         <label for="other-schedule">Outro</label>
-                        <input type="text" name="Horario-disponivel">
+                        <input type="text">
                     </div>
             </section>
 
             <section class="obs-sec">
                 <label for="observations">Observações</label>
-                <textarea name="observation" id="observations" placeholder="Gostaria de..." rows="6"></textarea>
+                <textarea id="observations" placeholder="Gostaria de..." rows="6"></textarea>
             </section>
 
             <section class="hear-about-us-sec">
-                <label for="hear-about-us" name="Como Chegou até nós">Como chegaste até nós?</label>
+                <label for="hear-about-us" value="Como Chegou até nós">Como chegaste até nós?</label>
                 <div>
                     <input type="checkbox" id="facebook" name="facebook" value="facebook">
                     <label for="facebook">Facebook</label>
