test cart form 4

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -81,7 +81,7 @@
 
                 <div class="radio-buttons">
                     <div>
-                        <input id="deliver-box" type="radio" name="deliver" value="Para Entregar em Casa" checked>
+                        <input id="deliver-box" type="radio" name="deliver" value="Para Entregar em Casa">
                         <label for="deliver-box">Entrega</label>
                     </div>
                     <div>
@@ -165,7 +165,7 @@
                     Onde preferes levantar a tua encomenda?
                 </h5>
                 <div>
-                    <input id="praca" type="radio" name="local" checked>
+                    <input id="praca" type="radio" name="local">
                     <div class="mercado">
                         <label for="praca">Mercado de Famalicão</label>
                         <span>Sábado (7:00 - 13:00)</span>
@@ -227,15 +227,15 @@
                 </div>
                 <div>
                     <input type="checkbox" id="publicidade" name="publicidade" value="publicidade">
-                    <label for="">Publicidade</label>
+                    <label for="publicidade">Publicidade</label>
                 </div>
                 <div>
                     <input type="checkbox" id="amigos" name="amigos" value="amigos">
-                    <label for="">Amigos</label>
+                    <label for="amigos">Amigos</label>
                 </div>
                 <div>
                     <input type="checkbox" id="outros" name="outros" value="outros">
-                    <label for="">Outro</label>
+                    <label for="outros">Outro</label>
                     <input type="text" id="outro" name="Outro">
                 </div>
             </section>
