--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -122,8 +122,8 @@
                         <label for="cp">Código Postal</label>
                     </div>
                     <div class="cp-numbers">
-                        <input id="cp" type="number">
-                        <input id="cp" type="number">
+                        <input id="cp" type="number" name="Código Postal">
+                        <input id="cP" type="number" name="Código Postal">
                     </div>
                 </div>
                 <div>
@@ -136,7 +136,7 @@
                 </div>
                 <div class="schedule-deliver">
                     <label for="schedule">Horário</label>
-                    <select id="schedule">
+                    <select id="schedule" name="Horário">
                         <optgroup label="Manhã">
                             <option value="9h-10h">09:00 - 10:00</option>
                             <option value="10h-11h">10:00 - 11:00</option>
@@ -182,11 +182,11 @@
                 <input type="hidden" name="Levantamento na Horta">
                 <div>
                     <label for="pick-up-day">Dia de Levantamento</label>
-                    <input id="pick-up-day" type="date">
+                    <input id="pick-up-day" type="date" name="Quero Levantar neste dia">
                 </div>
                 <div class="schedule-deliver">
                     <label for="ppick-up-schedule">Horário</label>
-                    <select id="ppick-up-schedule">
+                    <select id="ppick-up-schedule" name="Horário">
                         <optgroup label="Manhã">
                             <option value="9h-10h">09:00 - 10:00</option>
                             <option value="10h-11h">10:00 - 11:00</option>
