test 6 - cart forms

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -136,7 +136,7 @@
                 </div>
                 <div class="schedule-deliver">
                     <label for="schedule">Horário</label>
-                    <select id="schedule" name="Horário">
+                    <select id="schedule" name="Horário" value="horario entre: ">
                         <optgroup label="Manhã">
                             <option value="9h-10h">09:00 - 10:00</option>
                             <option value="10h-11h">10:00 - 11:00</option>
@@ -152,8 +152,8 @@
                     </select>
 
                     <div>
-                        <label for="other-schedule">Outro</label>
-                        <input type="text" name="Horario-disponivel">
+                        <label for="other-schedule">Outro horário</label>
+                        <input type="text" name="Horário Disponivel">
                     </div>
                 </div>
             </section>
@@ -201,8 +201,8 @@
                         </optgroup>
                     </select>
                     <div>
-                        <label for="other-schedule">Outro</label>
-                        <input type="text">
+                        <label for="other-schedule">Outro horário</label>
+                        <input type="text" name="Horário p/Levantamento">
                     </div>
             </section>
 
