--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -82,11 +82,11 @@
                 <div class="radio-buttons">
                     <div>
                         <input id="deliver-box" type="radio" name="deliver" value="Para Entregar em Casa">
-                        <label for="deliver-box">Entrega</label>
+                        <label for="deliver-box" name="Name-Entrega" value="value-entrega">Entrega</label>
                     </div>
                     <div>
                         <input id="pick-up-box" type="radio" name="deliver" value="Vai Levantar a Encomenda">
-                        <label for="pick-up-box">Levantar</label>
+                        <label for="pick-up-box" name="Name-levantar" value="value-levantar">Levantar</label>
                     </div>
                 </div>
                 <div>
