added functionality to the inputs on advancePageOne
Now the input only will be send if valid

--- a/html/informations.html
+++ b/html/informations.html
@@ -81,7 +81,11 @@
                 <i class="fa-solid fa-info"></i>
             </a>
         </div>
-        <div class="criar-cabaz"><i class="fa-solid fa-basket-shopping"></i></div>
+        <div class="criar-cabaz">
+            <a href="/html/produtos.html">
+                <i class="fa-solid fa-seedling"></i>
+            </a>
+        </div>
         <div class="login"><i class="fa-solid fa-user"></i></div>
     </section>
 <!-- ================================================================ -->
@@ -121,7 +125,7 @@
                 </a>
                 </span> 
                 Aqui podes selecionar vários produtos à tua escolha e ainda tens a possibilidade de consultar
-                qual o preço por artigo, quantidade e final.
+                qual o preço por artigo e por quantidade.
             </p>
             <p>Uma vez escolhidos os produtos, as respetivas quantidades e devidamente adicionados ao cesto,
                 chega o momento de responderes a umas breves questões sobre a tua encomenda.
