--- a/html/success.html
+++ b/html/success.html
@@ -81,7 +81,11 @@
                 <i class="fa-solid fa-info"></i>
             </a>
         </div>
-        <div class="criar-cabaz"><i class="fa-solid fa-basket-shopping"></i></div>
+        <div class="criar-cabaz">
+            <a href="/html/produtos.html">
+                <i class="fa-solid fa-seedling"></i>
+            </a>
+        </div>
         <div class="login"><i class="fa-solid fa-user"></i></div>
     </section>
         
