--- a/html/cabaz-dois.html
+++ b/html/cabaz-dois.html
@@ -78,9 +78,16 @@
                 <i class="fa-solid fa-info"></i>
             </a>
         </div>
-        <div class="criar-cabaz"><i class="fa-solid fa-basket-shopping"></i></div>
+        <div class="criar-cabaz">
+            <a href="/html/produtos.html">
+                <i class="fa-solid fa-seedling"></i>
+            </a>
+        </div>
         <div class="login"><i class="fa-solid fa-user"></i></div>
     </section>
+
+    <!-- ITEM ADDED TO CART -->
+    <div class="alert"></div>
 
     <!-- Watch cabaz-dois.js -->
     <section class="cabaz-dois"></section>
