--- a/html/produtos.html
+++ b/html/produtos.html
@@ -81,7 +81,11 @@
                 </a>
             </div>
             <div class="info"><i class="fa-solid fa-info"></i></div>
-            <div class="criar-cabaz"><i class="fa-solid fa-basket-shopping"></i></div>
+            <div class="criar-cabaz">
+                <a href="/html/produtos.html">
+                    <i class="fa-solid fa-seedling"></i>
+                </a>
+            </div>
             <div class="login"><i class="fa-solid fa-user"></i></div>
         </section>
 
