--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
                 </a>
             </div>
             <div class="criar-cabaz">
-                <i class="fa-solid fa-basket-shopping"></i>
+                <a href="/html/produtos.html">
+                    <i class="fa-solid fa-seedling"></i>
+                </a>
             </div>
             <div class="login"><i class="fa-solid fa-user"></i></div>
         </section>
