testing cart form

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -246,7 +246,8 @@
 
             <!-- BUTTON SUBMIT -->
             <button type="submit" class="send-user-data-btn">
-                <a href="/html/success.html">Avançar</a>
+                <!-- <a href="/html/success.html">Avançar</a> -->
+                Avançar
             </button>
 
         </form>
