testing cart form submission

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -70,7 +70,7 @@
 
     <section class="client-data-sec">
 
-        <form class="contactForm" name="Horta_da_Ria_Encomenda" action="/html/success.html" method="POST" data-netlify="true"> 
+        <form class="cart-form" name="Horta_da_Ria_Encomenda" action="/html/success.html" method="POST" data-netlify="true"> 
         <input type="hidden" name="subject" value="Nova Encomenda" id="newMessage" data-remove-prefix>
 
             <h4>
@@ -166,7 +166,7 @@
                     Onde preferes levantar a tua encomenda?
                 </h5>
                 <div>
-                    <input id="praca" type="radio" name="local" value="Mercado">
+                    <input id="praca" type="radio" name="local" value="Mercado" checked>
                     <div class="mercado">
                         <label for="praca">Mercado de Famalicão</label>
                         <span>Sábado (7:00 - 13:00)</span>
