testing cart form submission again

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -244,11 +244,11 @@
 
             <span class="error-message">* Preenchimento Obrigatório</span>
 
-            <div class="cart-items-selected hide-section">
+            <!-- <div class="cart-items-selected hide-section">
                 <label for="cart" class="hide-section" name="Cesto:" value="CESTO:">
                     Cesto:
                 </label>
-            </div>
+            </div> -->
 
             <!-- BUTTON SUBMIT -->
             <button type="submit" class="send-user-data-btn" disabled>
