--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -103,7 +103,11 @@
                     <label for="phone-number">Telemóvel</label>
                     <input id="phone-number" type="number" name="Telemóvel">
                 </div>
-                
+                <div class="cart-items-selected">
+                    <!-- <label for="cart" class="" name="Cesto:" value="CESTO:">
+                        Cesto:
+                    </label> -->
+                </div>
             </section>
                 <!-- ======= ENTREGA ========= -->
             <section class="deliver-sec border-1">
@@ -244,11 +248,7 @@
 
             <span class="error-message">* Preenchimento Obrigatório</span>
 
-            <div class="cart-items-selected">
-                <label for="cart" class="" name="Cesto:" value="CESTO:">
-                    Cesto:
-                </label>
-            </div>
+            
 
             <!-- BUTTON SUBMIT -->
             <button type="submit" class="send-user-data-btn" disabled>
