testing cart form

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -103,11 +103,7 @@
                     <label for="phone-number">Telemóvel</label>
                     <input id="phone-number" type="number" name="Telemóvel">
                 </div>
-                <div class="cart-items-selected">
-                    <!-- <label for="cart" class="" name="Cesto:" value="CESTO:">
-                        Cesto:
-                    </label> -->
-                </div>
+                
             </section>
                 <!-- ======= ENTREGA ========= -->
             <section class="deliver-sec border-1">
@@ -245,6 +241,7 @@
                     <input type="text" id="outro" name="Outro">
                 </div>
             </section>
+            <section class="hide-section cart-items-selected" name="Carrinho" value="CARRIHNO"></section>
 
             <span class="error-message">* Preenchimento Obrigatório</span>
 
