changing input names in cart Form

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -93,7 +93,7 @@
                 
                 <div>
                     <label for="name">Nome<span class="required-input-icon">*</span></label>
-                    <input id="name" type="text" name="Nome" required class="required">
+                    <input id="name" type="text" name="NomeCliente" required class="required">
                 </div>
                 <div>
                     <label for="email">Email<span class="required-input-icon">*</span></label>
@@ -124,8 +124,8 @@
                         <label for="cp">Código Postal<span class="required-input-icon">*</span></label>
                     </div>
                     <div class="cp-numbers">
-                        <input id="cp" type="number" name="Código Postal" required class="required">
-                        <input id="cP" type="number" name="Código Postal" required class="required">
+                        <input id="cp" type="number" name="CódigoPostalUm" required class="required">
+                        <input id="cP" type="number" name="CódigoPostalDois" required class="required">
                     </div>
                 </div>
                 <div>
@@ -238,7 +238,7 @@
                 <div>
                     <input type="checkbox" id="outros" name="outros" value="outros">
                     <label for="outros">Outro</label>
-                    <input type="text" id="outro" name="Outro">
+                    <input type="text" id="outro" name="comoChegueiAteVos">
                 </div>
             </section>
             <section class="hide-section cart-items-selected" name="Carrinho" value="CARRIHNO"></section>
