--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -241,7 +241,7 @@
                     <input type="text" id="outro" name="comoChegueiAteVos">
                 </div>
             </section>
-            <section class="hide-section cart-items-selected" name="Carrinho" value="CARRIHNO"></section>
+            <section class="cart-items-selected" name="Carrinho" value="CARRIHNO"></section>
 
             <span class="error-message">* Preenchimento Obrigatório</span>
 
