--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -244,7 +244,7 @@
                 </div>
             </section>
             <div class="cart-items-selected" data-netlify-recaptcha="true">
-                <input type="hidden" name="hortaDaRiaEncomenda" value="hortaDaRiaEncomenda">
+                <!-- <input type="hidden" name="hortaDaRiaEncomenda" value="hortaDaRiaEncomenda"> -->
             </div>
 
             <span class="error-message">* Preenchimento Obrigatório</span>
