--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -243,13 +243,13 @@
                     <input type="text" id="outro" name="comoChegueiAteVos">
                 </div>
             </section>
-            <div class="cart-items-selected" data-netlify-recaptcha="true">
+            <div class="cart-items-selected">
                 <!-- <input type="hidden" name="hortaDaRiaEncomenda" value="hortaDaRiaEncomenda"> -->
             </div>
 
             <span class="error-message">* Preenchimento Obrigatório</span>
 
-            
+            <div data-netlify-recaptcha="true"></div>
 
             <!-- BUTTON SUBMIT -->
             <button type="submit" class="send-user-data-btn" disabled>
