--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -249,7 +249,7 @@
 
             <span class="error-message">* Preenchimento Obrigatório</span>
 
-            <div data-netlify-recaptcha="true"></div>
+            <!-- <div data-netlify-recaptcha="true"></div> -->
 
             <!-- BUTTON SUBMIT -->
             <button type="submit" class="send-user-data-btn" disabled>
