--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -243,7 +243,7 @@
                     <input type="text" id="outro" name="comoChegueiAteVos">
                 </div>
             </section>
-            <div class="cart-items-selected">
+            <div class="cart-items-selected" name="Carrinho" value>
                 <!-- <input type="hidden" name="hortaDaRiaEncomenda" value="hortaDaRiaEncomenda"> -->
             </div>
 
