--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -243,9 +243,9 @@
                     <input type="text" id="outro" name="comoChegueiAteVos">
                 </div>
             </section>
-            <div class="cart-items-selected" name="Carrinho" value>
-                <!-- <input type="hidden" name="hortaDaRiaEncomenda" value="hortaDaRiaEncomenda"> -->
-            </div>
+            <input type="hidden" class="cart-items-selected" name="carrinhodoCliente" value="clienteCarrinho">
+                <input type="hidden" name="hortaDaRiaEncomenda" value="hortaDaRiaEncomenda">
+            
 
             <span class="error-message">* Preenchimento Obrigatório</span>
 
