--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -211,7 +211,7 @@
 
             <section class="obs-sec">
                 <label for="observations">Observações</label>
-                <textarea id="observations" placeholder="Gostaria de..." rows="6"></textarea>
+                <textarea id="observations" name="observations" placeholder="Gostaria de..." rows="6"></textarea>
             </section>
 
             <section class="hear-about-us-sec">
