--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -243,7 +243,7 @@
                     <input type="text" id="outro" name="comoChegueiAteVos">
                 </div>
             </section>
-            <input type="hidden" class="cart-items-selected" name="carrinhodoCliente" value="clienteCarrinho">
+            <div type="hidden" class="cart-items-selected" name="carrinhoDoCliente"></div>
             
 
             <span class="error-message">* Preenchimento Obrigatório</span>
