--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -243,7 +243,9 @@
                     <input type="text" id="outro" name="comoChegueiAteVos">
                 </div>
             </section>
-            <div type="hidden" class="cart-items-selected" name="carrinhoDoCliente"></div>
+            <div class="cart-items-selected" name="carrinhoDoCliente">
+                <label for="itemChosedClient" name="carrinhoCliente" value="carrinhoDoCliente"></label>
+            </div>
             
 
             <span class="error-message">* Preenchimento Obrigatório</span>
