--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -70,7 +70,7 @@
 
     <section class="client-data-sec">
 
-        <form class="cart-form" name="hortaDaRiaEncomenda" action="/html/success.html" method="POST" data-netlify="true"> 
+        <form hidden class="cart-form" name="hortaDaRiaEncomenda" action="/html/success.html" method="POST" data-netlify="true"> 
         <input type="hidden" name="subject" value="Nova Encomenda" id="newMessage" data-remove-prefix>
         <input type="hidden" name="hortaDaRiaEncomenda" value="hortaDaRiaEncomenda">
         
