--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -72,7 +72,6 @@
 
         <form hidden class="cart-form" name="hortaDaRiaEncomenda" action="/html/success.html" method="POST" data-netlify="true"> 
         <input type="hidden" name="subject" value="Nova Encomenda" id="newMessage" data-remove-prefix>
-        <input type="hidden" name="hortaDaRiaEncomenda" value="hortaDaRiaEncomenda">
         
 
             <h4>
@@ -244,7 +243,7 @@
                 </div>
             </section>
             <div class="cart-items-selected" name="carrinhoDoCliente">
-                <label for="itemChosedClient" name="carrinhoCliente" value="carrinhoDoCliente"></label>
+                <label for="itemChosedClient" name="carrinhoCliente" value="carrinhoDoCliente">CEstinho LIndo</label>
             </div>
             
 
