--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -70,7 +70,7 @@
 
     <section class="client-data-sec">
 
-        <form hidden class="cart-form" name="hortaDaRiaEncomenda" action="/html/success.html" method="POST" data-netlify="true"> 
+        <form class="cart-form" name="hortaDaRiaEncomenda" action="/html/success.html" method="POST" data-netlify="true"> 
         <input type="hidden" name="subject" value="Nova Encomenda" id="newMessage" data-remove-prefix>
         
 
@@ -243,7 +243,7 @@
                 </div>
             </section>
             <div class="cart-items-selected" name="carrinhoDoCliente">
-                <label for="itemChosedClient" name="carrinhoCliente" value="carrinhoDoCliente">CEstinho LIndo</label>
+                <input type="hidden" name="Cesto" id="cartContent">
             </div>
             
 
