improve the cart apresentation on final submission

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -214,30 +214,30 @@
             </section>
 
             <section class="hear-about-us-sec">
-                <label for="hear-about-us" name="Como Chegou até nós" value="Como Chegou até nós">Como chegaste até nós?</label>
-                <input type="hidden" name="CHEGOU ATÉ NÓS ATRAVÉS DE:" value="CHEGOU ATÉ NÓS ATRAVÉS DE:">
+                <label for="hear-about-us" name="Como Chegou até nós">Como chegaste até nós?</label>
+                <!-- <input type="hidden" name="CHEGOU ATÉ NÓS ATRAVÉS DE:"> -->
                 <div>
-                    <input type="checkbox" id="facebook" name="facebook" value="facebook">
+                    <input type="checkbox" id="facebook" name="facebook">
                     <label for="facebook">Facebook</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="instagram" name="instagram" value="instagram">
+                    <input type="checkbox" id="instagram" name="instagram">
                     <label for="instagram">Instagram</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="PraçaMercadoFamalicao" name="PraçaMercadoFamalicao" value="Praça Mercado Famalicão">
+                    <input type="checkbox" id="PraçaMercadoFamalicao" name="PraçaMercadoFamalicao">
                     <label for="PraçaMercadoFamalicao">Praça Mercado Famalicão</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="publicidade" name="publicidade" value="publicidade">
+                    <input type="checkbox" id="publicidade" name="publicidade">
                     <label for="publicidade">Publicidade</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="amigos" name="amigos" value="amigos">
+                    <input type="checkbox" id="amigos" name="amigos" >
                     <label for="amigos">Amigos</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="outros" name="outros" value="outros">
+                    <input type="checkbox" id="outros" name="outros" >
                     <label for="outros">Outro</label>
                     <input type="text" id="outro" name="comoChegueiAteVos">
                 </div>
