add final price to form submission

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -244,6 +244,7 @@
             </section>
             <div class="cart-items-selected" name="carrinhoDoCliente">
                 <input type="hidden" name="Cesto" id="cartContent">
+                <input type="hidden" name="valorAPagar" id="totalPriceToPayId">
             </div>
             
 
